fix extra padding

--- a/app/routes/divaOutput/divaOutputView.css
+++ b/app/routes/divaOutput/divaOutputView.css
@@ -72,6 +72,7 @@ dd {
 }
 
 dd + dd {
+  padding-left: 0;
   &:not(:has(> button))::before {
     content: ', ';
   }
